--- a/frontend/core/src/main/webapp/static/app/base/lists.html
+++ b/frontend/core/src/main/webapp/static/app/base/lists.html
@@ -1,4 +1,4 @@
-<div class="single-page-container" ng-class="isFooterVisible ? 'show-footer' : 'hide-footer'">
+<div class="single-page-container">
   <section id="lists" class="one-column-grid single-page page" snap-drawer-drag="lists" ng-init="newList = {};">
     <div class="column">
       <div ng-hide="omnibarVisible" class="content-container page-content-container">
