--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -1,4 +1,4 @@
-<div ng-show="isFeatureActive('inbox')" class="single-page-container" ng-class="isFooterVisible ? 'show-footer' : 'hide-footer'" ng-controller="InboxController">
+<div ng-show="isFeatureActive('inbox')" class="single-page-container" ng-controller="InboxController">
   <section id="inbox" class="two-column-grid single-page page" snap-drawer-drag="inbox">
     <div class="column">
       <div ng-hide="omnibarVisible" class="content-container page-content-container single-page-content-container">
