--- a/frontend/core/src/main/webapp/static/app/main/footer.html
+++ b/frontend/core/src/main/webapp/static/app/main/footer.html
@@ -1,19 +1,19 @@
 <nav class="swiper-no-swiping" role="navigation" ng-controller="FooterController">
 
-  <ul ng-if="hasVisibleToasterNotification()" class="horizontally-justified omnibar-toast-notification">
-    <li id="left-slide-link" class="justified-element">
+  <ul ng-if="hasVisibleToasterNotification()" class="horizontally-justified toaster-notification">
+    <li class="justified-element left-slide-link">
       <span>saved to </span>
       <a href ng-click="gotoToasterLocationAndCall(toasterNotification.location, hideToasterNotification)">{{toasterNotification.location}}</a>
     </li>
 
-    <li id="right-slide-link" class="justified-element">
+    <li class="justified-element right-slide-link">
       <a href class="toaster-x-mark" ng-click="hideToasterNotification()">&#x2716</a>
     </li>
     <li id="stretch"></li>
   </ul>
 
-  <ul ng-if="hasFeatureFooter()" class="horizontally-justified">
-    <li id="left-slide-link" class="justified-element">
+  <ul ng-if="hasFeatureFooter()" class="horizontally-justified feature-footer">
+    <li class="justified-element left-slide-link">
       <a href ng-class="isActiveSlide(getLeftSlideName()) && 'active-slide'" ng-click="gotoLeftSlide()">
         <span ng-bind="getLeftSlideHeading()"></span>
       </a>
@@ -25,7 +25,7 @@
       </a>
     </li>
 
-    <li id="right-slide-link" class="justified-element">
+    <li class="justified-element right-slide-link">
       <a href ng-class="isActiveSlide(getRightSlideName()) && 'active-slide'" ng-click="gotoRightSlide()">
         <span ng-bind="getRightSlideHeading()"></span>
       </a>
