Made settings page scrollable and removed mistakenly typed letter from html file.

--- a/frontend/core/src/main/webapp/static/app/account/settings.html
+++ b/frontend/core/src/main/webapp/static/app/account/settings.html
@@ -1,8 +1,8 @@
-<div class="single-page-container"Z>
+<div class="single-page-container">
   <section id="settings" class="one-column-grid single-page page" ng-controller="SettingsController" snap-drawer-drag="settings">
     <div class="column">
-      <div ng-hide="omnibarVisible" class="content-container page-content-container">
-        <ul>
+      <div ng-hide="omnibarVisible" class="content-container page-content-container single-page-content-container">
+        <ul class="scroll-container">
           <li class="simple-content">
             <h3>version</h3>
             <span ng-bind="extendedMindVersion"></span>
