--- a/frontend/core/src/main/webapp/static/app/auth/menu.html
+++ b/frontend/core/src/main/webapp/static/app/auth/menu.html
@@ -16,11 +16,11 @@
       <div class="lists-heading-container" >
         <a href class="lists-link" ng-class="getFeatureClass('lists')" ng-click="gotoFeature('lists')">lists</a>
         <a href ng-class="getFeatureClass('lists')" class="hide-expand-link" ng-click="toggleLists()">
-          <span ng-if="lists.length && listsVisible">-</span>
-          <span ng-if="lists.length && !listsVisible">+</span>
+          <span ng-if="lists.length && isListsVisible()">-</span>
+          <span ng-if="lists.length && !isListsVisible()">+</span>
         </a>
       </div>
-      <ul class="lists" ng-if="listsVisible">
+      <ul class="lists" ng-if="isListsVisible()">
         <li class="list" ng-repeat="list in lists">
           <span class="left-margin"></span>
           <a href class="list-link" ng-class="getListClass(list)" ng-click="gotoList(list)">{{getListTitleText(list)}}</a>
