Changed static page header omni button to link to remove ugly highlight.

--- a/frontend/core/src/main/webapp/static/app/main/staticPageHeader.html
+++ b/frontend/core/src/main/webapp/static/app/main/staticPageHeader.html
@@ -9,8 +9,8 @@
     <a href class="heading" ng-click="switchFeature()">{{getCurrentHeading()}}</a>
   </div>
   <div class="omni-button-container">
-    <button type="button" class="omni-button" ng-click="openOmnibar('search')">
+    <a href class="omni-button" ng-click="openOmnibar('search')">
       <span class="icon-logo-only"></span>
-    </button>
+    </a>
   </div>
 </nav>
