Swapped expanding textarea plugin to Angular Elastic https://github.com/monospaced/angular-elastic which works without timeouting.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -31,6 +31,7 @@
     <script src="static/lib/angularjs/ngInfiniteScroll.js"></script>
 
     <script src="static/lib/base64.js"></script>
+    <script src="static/lib/elastic.js"></script>
 
     <script src="static/common/common.js"></script>
     <script src="static/common/DateService.js"></script>
@@ -48,7 +49,6 @@
     <script src="static/common/optionsDisabledDirective.js"></script>
     <script src="static/common/passwordMatchDirective.js"></script>
     <script src="static/common/swiper.js"></script>
-    <script src="static/common/expanding.js"></script>
 
     <script src="static/app/app.js"></script>
 
@@ -74,7 +74,6 @@
     <script src="static/app/base/addItemDirective.js"></script>
     <script src="static/app/base/accordionTitleDirective.js"></script>
     <script src="static/app/base/accordionTitleLinkDirective.js"></script>
-    <script src="static/app/base/expandingTextareaDirective.js"></script>
     <script src="static/app/base/itemCoreFieldsDirective.js"></script>
     <script src="static/app/base/featureContainerDirective.js"></script>
     <script src="static/app/base/snapDrawerDragDirective.js"></script>
