--- a/frontend/core/src/main/webapp/static/app/base/itemCoreFields.html
+++ b/frontend/core/src/main/webapp/static/app/base/itemCoreFields.html
@@ -5,6 +5,6 @@
   </div>
   <div ng-show="showDescription()" class="form-group">
     <label class="sr-only" for="itemDescription">description</label>
-    <textarea id="itemDescription" class="simple-input" ng-model="item.description" placeholder="description..." maxlength="1024" expanding-textarea editable-field></textarea>
+    <textarea id="itemDescription" class="simple-input" ng-model="item.description" placeholder="description..." maxlength="1024" msd-elastic editable-field></textarea>
   </div>
 </div>
