--- a/frontend/core/src/main/webapp/static/app/main/omnibar.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibar.html
@@ -119,7 +119,7 @@
         </div>
         <div class="form-group" ng-style="{maxHeight: getEditTaskDescriptionMaxHeight()}" >
           <label class="sr-only" for="taskDescription">description</label>
-          <textarea id="taskDescription" class="simple-input" ng-style="{maxHeight: getEditTaskDescriptionMaxHeight()}" ng-model="task.description" placeholder="description..." maxlength="1024" expanding-textarea editable-field></textarea>
+          <textarea id="taskDescription" class="simple-input" ng-style="{maxHeight: getEditTaskDescriptionMaxHeight()}" ng-model="task.description" placeholder="description..." maxlength="1024" msd-elastic editable-field></textarea>
         </div>
       </form>
     </div>
@@ -148,7 +148,7 @@
 
           <div ng-switch-default class="form-group" ng-style="{maxHeight: getEditNoteContentMaxHeight()}">
             <label class="sr-only" for="noteContent">content</label>
-            <textarea class="simple-input" ng-style="{maxHeight: getEditNoteContentMaxHeight()}" id="noteContent" ng-model="note.content" placeholder="content..." expanding-textarea editable-field></textarea>
+            <textarea class="simple-input" ng-style="{maxHeight: getEditNoteContentMaxHeight()}" id="noteContent" ng-model="note.content" placeholder="content..." msd-elastic editable-field></textarea>
           </div>
 
           <div ng-switch-when="true" class="keywords-container">
