Moved into minimal interactive onboarding. Can be tested with jp@ext.md jiipeepwd.

--- a/frontend/core/src/main/webapp/static/app/account/settings.html
+++ b/frontend/core/src/main/webapp/static/app/account/settings.html
@@ -16,8 +16,8 @@
               <a class="highlighted-link" href="mailto:support@ext.md"> support@ext.md</a>
             </small>
           </li>
-          <li>
-            <input class="input-checkbox" type="checkbox" name="checkbox" id="showOnboarding" ng-model="settings.showOnboarding" ng-change="showOnboardingChecked(settings.showOnboarding)"/>
+          <li ng-if="showOnboardingCheckbox()">
+            <input class="input-checkbox" type="checkbox" name="checkbox" id="showOnboarding" ng-model="settings.showOnboarding" ng-change="onboardingChecked(settings.showOnboarding)"/>
             <label class="default-element small-font" for="showOnboarding">show onboarding on next login</label>
           </li>
           <li>
