Better layout for onboarding

--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -28,7 +28,7 @@
             </div>
           </div>
           <div ng-if="getOnboardingPhase() === 'itemAdded'" class="instruction-text">
-            <p class="instruction-text-chapter">use <b>omnibar</b> <span class="icon-logo-only"></span> for quick store and recall</p>
+            <p class="instruction-text-chapter">use <b>omnibar</b> <span class="icon-logo-only"></span><br/>for quick store and recall</p>
             <p class="instruction-text-chapter">use <b>sort inbox</b> to sort your items into <b>tasks</b>, <b>notes</b> and <b>lists</b></p>
           </div>
           <footer ng-if="(items.length > 0 && sortingItem === undefined)">
