Added instruction texts to tasks, notes, lists, contexts, keywords and archived lists

--- a/frontend/core/src/main/webapp/static/app/auth/menu.html
+++ b/frontend/core/src/main/webapp/static/app/auth/menu.html
@@ -20,7 +20,7 @@
           <span ng-if="lists.length && !isListsVisible()">+</span>
         </a>
       </div>
-      <ul class="lists" ng-if="isListsVisible()">
+      <ul class="lists" ng-if="isListsVisible() && lists.length > 0">
         <li class="list" ng-repeat="list in lists">
           <span class="left-margin"></span>
           <a href class="list-link" ng-class="getListClass(list)" ng-click="gotoList(list)">{{getListTitleText(list)}}</a>
