--- a/frontend/core/src/main/webapp/static/app/base/lists.html
+++ b/frontend/core/src/main/webapp/static/app/base/lists.html
@@ -18,6 +18,11 @@
                   </div>
                 </form>
               </li>
+              <li ng-if="lists.length === 0">
+                <div class="instruction-text">
+                  <p class="instruction-text-chapter">lists are <b>collections of<br>tasks and notes</b></p>
+                </div>
+              </li>
             </ul>
           </section>
         </div>
