--- a/frontend/core/src/main/webapp/static/app/notes/keywords.html
+++ b/frontend/core/src/main/webapp/static/app/notes/keywords.html
@@ -18,6 +18,12 @@
                 </div>
               </form>
             </li>
+            <li ng-if="keywords.length === 0">
+              <div class="instruction-text">
+                <p class="instruction-text-chapter">keywords are what the<br/>note <b>is about</b><br/><br/>
+                <span class="small-font">(e.g. recipes, business cards,<br/>physics, homework etc.)</span>
+              </div>
+            </li>
           </ul>
           <h3>
             <a href class="page-header click-to-slide" swiper-click="showNoKeywordDetails()">
