--- a/frontend/core/src/main/webapp/static/app/notes/recent.html
+++ b/frontend/core/src/main/webapp/static/app/notes/recent.html
@@ -16,6 +16,11 @@
             </div>
             <div ng-if="!note.content" class="teaser-empty"></div>
           </div>
+          <div ng-if="notes.length === 0">
+            <div class="instruction-text">
+              <p class="instruction-text-chapter">notes are things you<br/>want to <b>remember</b><br/><br/>
+            </div>
+          </div>
         </div>
       </div>
     </div>
