--- a/frontend/core/src/main/webapp/static/app/tasks/contexts.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/contexts.html
@@ -21,7 +21,7 @@
             <li ng-if="contexts.length === 0">
               <div class="instruction-text">
                 <p class="instruction-text-chapter">contexts are<br/><b>task types</b><br/><br/>
-                <span class="small-font">(e.g. home, computer,<br/>phone, errands etc.)</span>
+                <span class="instruction-text-chapter-details">(e.g. home, computer,<br/>phone, errands etc.)</span>
               </div>
             </li>
           </ul>
