Fixed instruction text layout, examples for lists

--- a/frontend/core/src/main/webapp/static/app/base/editLists.html
+++ b/frontend/core/src/main/webapp/static/app/base/editLists.html
@@ -37,7 +37,9 @@
             </form>
             <div ng-if="lists.length === 0">
               <div class="instruction-text">
-                <p class="instruction-text-chapter">lists are <b>collections of<br>tasks and notes</b></p>
+                <p class="instruction-text-chapter">lists are <b>collections of</b><br/><b>tasks and notes</b><br/><br/>
+                  <span class="instruction-text-chapter-details">(e.g. holiday trip, birthday party,<br/>work, studies etc.)</span>
+                </p>
               </div>
             </div>
           </div>
