--- a/frontend/core/src/main/webapp/static/app/base/lists.html
+++ b/frontend/core/src/main/webapp/static/app/base/lists.html
@@ -20,7 +20,9 @@
               </li>
               <li ng-if="lists.length === 0">
                 <div class="instruction-text">
-                  <p class="instruction-text-chapter">lists are <b>collections of<br>tasks and notes</b></p>
+                  <p class="instruction-text-chapter">lists are <b>collections of</b><br/><b>tasks and notes</b><br/><br/>
+                    <span class="instruction-text-chapter-details">(e.g. holiday trip, birthday party,<br/>work, studies etc.)</span>
+                  </p>
                 </div>
               </li>
             </ul>
