--- a/frontend/core/src/main/webapp/static/app/main/omnibar.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibar.html
@@ -33,7 +33,7 @@
 
   </div>
 
-  <div ng-switch="getActiveOmnibarFeature()" style="overflow: hidden" ng-style="{height: getOmnibarFeatureHeight()}" class="swiper-no-swiping omnibar-feature" data-snap-ignore="true" scroll-to>
+  <div ng-switch="getActiveOmnibarFeature()" class="swiper-no-swiping omnibar-feature" scroll-to>
 
     <div ng-switch-when="search" class="omnibar-search">
 
