Fixed archived lists not showing details. Fixed quick adding note to existing list being saved without list info

--- a/frontend/core/src/main/webapp/static/app/base/editLists.html
+++ b/frontend/core/src/main/webapp/static/app/base/editLists.html
@@ -16,7 +16,7 @@
                       </button>
                     </li>
                     <li class="button-container center-of-three">
-                      <button class="default-button" type="button" ng-click="closeAndCall(list, archiveListAndMoveInbox)">
+                      <button class="default-button" type="button" ng-click="closeAndCall(list, archiveList)">
                         archive
                       </button>
                     </li>
